@@ -47,9 +47,18 @@ static gint
 idle_handler (gpointer data)
 {
 	GtkHTML *html;
+	HTMLEngine *engine;
 
 	html = GTK_HTML (data);
-	html_engine_flush_draw_queue (html->engine);
+	engine = html->engine;
+
+	html_engine_make_cursor_visible (engine);
+	gtk_adjustment_set_value (GTK_LAYOUT (html)->hadjustment,
+				  (gfloat) engine->x_offset);
+	gtk_adjustment_set_value (GTK_LAYOUT (html)->vadjustment,
+				  (gfloat) engine->y_offset);
+
+	html_engine_flush_draw_queue (engine);
 
 	html->idle_handler_id = 0;
 	return FALSE;
