@@ -381,5 +381,5 @@ void
 html_painter_draw_cursor (HTMLPainter *painter, gint x, gint y, gint ascent, gint descent)
 {
 	html_painter_set_pen (painter, &painter->black);
-	html_painter_draw_line (painter, x, y - ascent, x, y + descent);
+	html_painter_draw_line (painter, x, y - ascent, x, y + descent - 1);
 }
